force-app/main/default/objects/Activity/fields/Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approval_Comments__c</fullName>
    <label>Approval Comments</label>
    <type>TextArea</type>
</CustomField>