force-app/main/default/objects/Activity/fields/Attendee_List__c.field-meta.xml
<CustomField>
    <fullName>Attendee_List__c</fullName>
    <label>Attendee List</label>
    <type>TextArea</type>
</CustomField>