force-app/main/default/objects/Activity/fields/Candidate_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Attendance__c</fullName>
    <label>Candidate Attendance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Absent</fullName>
            </value>
            <value>
                <fullName>Present</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>