force-app/main/default/objects/Activity/fields/ConferenceId__c.field-meta.xml
<CustomField>
    <fullName>ConferenceId__c</fullName>
    <label>ConferenceId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>