force-app/main/default/objects/Activity/fields/Meeting_type__c.field-meta.xml
<CustomField>
    <fullName>Meeting_type__c</fullName>
    <label>Meeting Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>