force-app/main/default/objects/Activity/fields/Mutual_Meeting_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Mutual_Meeting_Seconds__c</fullName>
    <label>Mutual Meeting Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>