force-app/main/default/objects/Activity/fields/Notes_File_Path__c.field-meta.xml
<CustomField>
    <fullName>Notes_File_Path__c</fullName>
    <label>Notes File Path</label>
    <type>TextArea</type>
</CustomField>