force-app/main/default/objects/Activity/fields/Recording_File_Path__c.field-meta.xml
<CustomField>
    <fullName>Recording_File_Path__c</fullName>
    <label>Recording File Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>