force-app/main/default/objects/Activity/fields/Type_of_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Meeting__c</fullName>
    <label>Type of Meeting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enquiry</fullName>
                <default>true</default>
                <label>Enquiry</label>
            </value>
            <value>
                <fullName>Enrollment</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Escalation</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>