force-app/main/default/objects/Activity/fields/Type_of_Offline_gmeet__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Offline_gmeet__c</fullName>
    <label>Type of Offline Gmeet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enquiry</fullName>
            </value>
            <value>
                <fullName>Enrollment</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Escalation</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>